--- a/Blog.html
+++ b/Blog.html
@@ -137,6 +137,10 @@
     </div>
 </div>
 
+<a href="./contact.html" class="contact-us-icon">
+    <i class='fa fa-comments'></i>
+</a>
+
 <footer class="footer">
 
     <!-- Footer Widget Section -->
@@ -214,14 +218,6 @@
         <div class="container clearfix">
             <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
                 rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS Developments</span>
-            <ul class="list-inline pull-right">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./services.html">Services</a></li>
-                <li><a href="./Mobileproducts.html">Partners</a></li>
-                <li class="active"><a href="./Blog.html">News</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
         </div>
         <!-- .container -->
     </div>
@@ -285,12 +281,7 @@
 <script src="js/popup.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
- 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script src="./js/responsive.min.js"></script>
 </body>
 </html>
