--- a/Mobileproducts.html
+++ b/Mobileproducts.html
@@ -114,21 +114,49 @@
 <section class="partners">
     <h2>Partners</h2>
 
-    <div class="logos">
-            <a id="topimage" href="./Products/Kaspersky.html"><img src="./img/karspersky product Icons/Asset_1.png" alt="Kaspersky"></a>
-            <a id="topimage" href="./Products/Sophos.html"><img src="./img/logo-client-2.png" alt="Sophos Logo"></a>
+    <div class="logo-grid">
+        <div class="logo">
+            <a href="./Products/Kaspersky.html"><img src="./img/karspersky product Icons/Asset_1.png" alt="PECB"></a>
+        </div>
+        <div class="logo">
+            <a href="./Products/Sophos.html"><img src="./img/logo-client-2.png" alt="Sophos Logo"></a>
+        </div>
+        <div class="logo">
             <a class="popup-link" data-video-id="bHOpHg4WwTMK"href="#"><img src="./img/logo-client-6.png" alt="Cisco"></a> 
+        </div>
+        <div class="logo">
             <a class="popup-link" data-video-id="O74W9BB0gGI" href="#"><img src="./img/logo-client-4.png" alt="CheckPoint"></a>
+        </div>
+        <div class="logo">
             <a class="popup-link" data-video-id="4kuznHDHb5o" href="#"><img src="./img/logo-client-5.png" alt="SYNAQ"></a>
+        </div>
+        <div class="logo">
             <a class="popup-link" data-video-id="A1qKp5bsGmo" href="#"><img src="./img/logo-client-3.png" alt="NetSheild"></a>
+        </div>
+        <div class="logo">
             <a class="popup-link" data-video-id="idHPbgMpdKo" href="#"><img src="./img/dell-tech-Logo.png" alt="Dell technologies"></a>
+        </div>
+        <div class="logo">
             <a href="./Products/Veeam.html"><img src="./img/veeam-logo.png" alt="Veeam"></a>
+        </div>
+        <div class="logo">
             <a class="popup-link" data-video-id="Wporyr3hr68" href="#"><img src="./img/hp_enterrprise.png" alt="HPE"></a>
+        </div>
+        <div class="logo">
             <a class="popup-link" data-video-id="UdQQNiQUzbE" href="#"><img src="./img/Huawei-Logo1-white.png" alt="Huawei"></a>
+        </div>
+        <div class="logo">
             <a class="popup-link" data-video-id="vXj4ufVF42M" href="#"><img src="./img/Vendors/solarwinds-logo.png" alt="Solarwinds"></a>
+        </div>
+        <div class="logo">
             <a class="popup-link" data-video-id="b7ZC01afWPw" href="#"><img src="./img/Vendors/Adobe-Logo.png" alt="Adobe"></a>
+        </div>
+        <div class="logo">
             <a class="popup-link" data-video-id="2W0T2qGZ9Dc" href="#"><img src="./img//Vendors/Microsoft-partner-logo.png" alt=""></a>
+        </div>
+        <div class="logo">
             <a class="popup-link" data-video-id="hpHkLLmkD_o" href="#"><img src="./img/Vendors/manageengine-logo.png" alt=""></a>
+        </div>
     </div>
 
 <div class="popup-overlay" id="popup-overlay">
@@ -218,15 +246,7 @@
       <div class="container clearfix">
         <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
           rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS Developments</span>
-          <ul class="list-inline pull-right">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./services.html">Services</a></li>
-            <li class="active"><a href="./Mobileproducts.html">Partners</a></li>
-            <li><a href="./Blog.html">News</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-        </ul>
-      </div>
+
       <!-- .container -->
   </div>
     <!-- .copyright-section -->
@@ -270,12 +290,7 @@
 <script src="./js/popup.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-   
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-   
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script src="./js/responsive.min.js"></script>
 </body>
 </html>
