--- a/Products/Sophos.html
+++ b/Products/Sophos.html
@@ -112,7 +112,6 @@
 <!-- .nav -->
 
 <section class="about-text ptb-100">
-    <button><a href="">Request a demo</a></button>
     <section class="section-title">
         <div class="Sophos-microsite">
             <iframe title="sophos-site-box" id="sophos-site-box" src='https://www.sophos.com/en-us/site-in-a-box?partner_referral_id=0013000001A8cMK&partner_name=IKASI+SOLUTIONS+CC' frameborder='0'></iframe>    
@@ -207,13 +206,6 @@
       <div class="container clearfix">
         <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
           rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS Developments</span>
-          <ul class="list-inline pull-right">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="../about.html">About</a></li>
-              <li class="active"><a href="../services.html">Services</a></li>
-              <li><a href="../Blog.html">News</a></li>
-              <li><a href="../contact.html">Contact</a></li>
-          </ul>
       </div>
       <!-- .container -->
   </div>
@@ -258,12 +250,7 @@
 <script src="../js/popup.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-   
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-   
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script src="./js/responsive.min.js"></script>  
 </body>
 </html>
