--- a/Upgrades.html
+++ b/Upgrades.html
@@ -19,12 +19,6 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="icon" href="./img/ikasi_logo.png" type="image/x-icon">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 <body>
     <div style="margin-left: 45%; margin-top: 15%;" id="blog">
@@ -43,6 +37,7 @@
 <script src="../js/flexSlider/jquery.flexslider-min.js"></script>
 <script src="../js/scripts.js"></script>
 <script src="js/popup.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script src="./js/responsive.min.js"></script>
 </body>
 </html>
