--- a/contact.html
+++ b/contact.html
@@ -124,19 +124,19 @@
         <form action="https://formspree.io/f/xqazlzwr" method="post">
             <div class="form-group">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+                <input type="text" id="name" name="name" required placeholder="Name"> 
             </div>
             <div class="form-group">
                 <label for="surname">Surname:</label>
-                <input type="text" id="surname" name="surname" required>
+                <input type="text" id="surname" name="surname" required placeholder="Surname">
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" required placeholder="example@gmail.com">
             </div>
             <div class="form-group">
                 <label for="phone">Phone Number (optional):</label>
-                <input type="tel" id="phone" name="phone">
+                <input type="tel" id="phone" name="phone" placeholder="0780009999">
                 <span class="optional">Please enter your phone number if you prefer to be contacted by phone.</span>
             </div>
             <div class="form-group">
@@ -185,6 +185,10 @@
       <iframe id="w-video" src="" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
+
+<a href="./contact.html" class="contact-us-icon">
+    <i class='fa fa-comments'></i>
+</a>
 
     <footer class="footer">
 
@@ -263,15 +267,6 @@
             <div class="container clearfix">
                 <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
                     rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS Developments</span>
-
-                    <ul class="list-inline pull-right">
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./about.html">About</a></li>
-                        <li><a href="./services.html">Services</a></li>
-                        <li><a href="./Mobileproducts.html">Partners</a></li>
-                        <li><a href="./Blog.html">News</a></li>
-                        <li class="active"><a href="./contact.html">Contact</a></li>
-                    </ul>
             </div>
             <!-- .container -->
         </div>
@@ -334,17 +329,11 @@
 <script src="js/smoothscroll.js"></script>
 <script src="js/mobile-menu.js"></script>
 <script src="js/flexSlider/jquery.flexslider-min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js"></script>
 <script src="js/scripts.js"></script>
 <script src="js/popup.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-   
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-   
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script src="./js/responsive.min.js"></script>
 </body>
 </html>
