--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                 <section id="x-services ptb-100 gray-bg" class="container">
                     <section class="section-title">
-                        <div style="padding-top: 30px;" class="container text-center">
+                        <div style="padding-top: 100px;" class="container text-center">
                             <h2>Home</h2>
                             <span class="bordered-icon"><i class="fa fa-circle-thin"></i></span>
                         </div>
@@ -179,11 +179,11 @@
                     <div class="container">
 
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6" id="services">
 
                                 <div class="thumbnail clearfix">
                                     <a href="services.html"><img class="img-responsive" src="img/communication logo.jpg"
-                                            alt="Image"></a>
+                                            alt="Image" height = "300px"></a>
 
                                     <div class="caption">
                                         <h3><a href="services.html">Communication</a></h3>
@@ -194,7 +194,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6" id="services">
                                 <div class="thumbnail clearfix">
                                     <a href="services.html"><img class="img-responsive" src="img/cloud logo.jpg" alt="Image"
                                             height="5%"></a>
@@ -211,7 +211,7 @@
                         </div>
                         <!-- row -->
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-md-6" id="services">
                                 <div class="thumbnail clearfix">
                                     <a href="services.html"><img class="img-responsive" src="img/security-logo.jpg" alt="Image"></a>
 
@@ -224,10 +224,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6" id="services">
                                 <div class="thumbnail clearfix">
                                     <a href="services.html"><img class="img-responsive" src="img/Networking logo.jpg"
-                                            alt="Image"></a>
+                                            alt="Image" height = "310 px;"></a>
 
                                     <div class="caption">
                                         <h3><a href="services.html">Networking</a></h3>
@@ -253,8 +253,8 @@
                 <!--Banner gallery-->
                 <div class="gallery-container">
                     <div class="gallery">
-                        <img src="./img/Kaspersky-banner.png" alt="Image 1">
-                        <img src="./img/sophos-banner.png" alt="Image 2">
+                        <img src="./img/Kaspersky-banner.jpg" alt="Image 1">
+                        <img src="./img/sophos-banner.jpg" alt="Image 2">
                     </div>
                     <button class="prev" onclick="prevSlide()">&#10094;</button>
                     <button class="next" onclick="nextSlide()">&#10095;</button>
@@ -273,6 +273,10 @@
                       <iframe title="YouTube Video Information" id="w-video" src="" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
+
+                <a href="./contact.html" class="contact-us-icon">
+                    <i class='fa fa-comments'></i>
+                </a>
 
                 <footer class="footer">
                     <!-- Footer Widget Section -->
@@ -350,15 +354,6 @@
                         <div class="container clearfix">
                             <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
                                 rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS Developments</span>
-
-                                <ul class="list-inline pull-right">
-                                    <li class="active" ><a href="./index.html">Home</a></li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./services.html">Services</a></li>
-                                    <li><a href="./Mobileproducts.html">Partners</a></li>
-                                    <li><a href="./Blog.html">News</a></li>
-                                    <li><a href="./contact.html">Contact</a></li>
-                                </ul>
                         </div>
                         <!-- .container -->
                     </div>
@@ -426,12 +421,9 @@
     <script src="js/scripts.js"></script>
     <script src="js/popup.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
-      <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="./js/responsive.min.js"></script>
 </body>
 
 </html>
