--- a/services.html
+++ b/services.html
@@ -540,15 +540,8 @@
               <div class="container clearfix">
                 <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
                   rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS Developments</span>
-                  <ul class="list-inline pull-right">
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./about.html">About</a></li>
-                    <li class="active"><a href="./services.html">Services</a></li>
-                    <li><a href="./Mobileproducts.html">Partners</a></li>
-                    <li ><a href="./Blog.html">News</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
-                </ul>
               </div>
+
               <!-- .container -->
           </div>
             <!-- .copyright-section -->
@@ -586,7 +579,7 @@
     </div>
     <!-- #main-wrapper -->
 
- <!--   <section>
+   <section>
       <div class="back-marquee" id="logo-marquee">
           <div class="marquee-content">
               <img src="./img/karspersky product Icons/Asset_1.png" alt="">
@@ -603,7 +596,7 @@
              
           </div>
       </div>
-  </section>-->
+  </section>
 
     <!-- Script -->
     <script src="js/jquery-2.1.4.min.js"></script>
@@ -619,11 +612,7 @@
     <script src="js/popup.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
-     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script src="./js/responsive.min.js"></script>
   </body>
 </html>
